--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ body{
   background-color: var(--color-blue);
   color: var(--color-white);
 
+  font-family: var(--highlight-font);
+
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
