--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;500;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
 
 :root{
-  --primary-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --primary-font: 'Inter', sans-serif;
   --highlight-font:monospace;
+
   --color-blue: #729fcf;
+  --color-black: #0e0e0e;
   --color-white:#fff;
 }
 
 body{
-  background-color: var(--color-blue);
+  background-color: var(--color-black);
   color: var(--color-white);
 
-  font-family: var(--highlight-font);
+  @apply font-mono;
 
   height: 100vh;
   width: 100vw;
@@ -22,6 +25,10 @@ body{
   overflow: hidden;
 }
 
-div.navbar{
+.font--highlight{
+  font-family: 'Chakra Petch', sans-serif;
+}
 
+div.hero--section{
+  
 }
